5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1800_2573.log
== TEST (2019-06-12 12:55:08) 
-- CODE:
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

imc[i]= peso[i]/altura[i]*altura[i]


vet = zeros(peso,dtype=float)

if(imc[i] == max(imc[i]):
	print("O MAIOR IMC DA TURMA EH:",max(imc[i]))

for i in range(size(peso)):
	imc[i] = peso[i]/altura[i]*altura[i]
	if(imc[i] < 17):
		print("muito abaixo do peso")
	elif(imc[i] >= 17 and <= 18.49):
		print("abaixo do peso"):
	elif(imc[i] >= 18.5 and <= 24.99):
		print("peso normal")
	elif(imc[i] >= 25 and <= 29.99):
		print("acima do peso")
	elif(imc[i] >= 30 and <= 34.99):
		print("obesidade")
	elif(imc[i] >= 35 and <= 39.99):
		print("obesidade severa")
	elif(imc[i] >= 40):
		print("obesidade morbida")
	
	
		


-- ERROR:
File "XXXX", line 9
    if(imc[i] == max(imc[i]):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:57:21) 
-- CODE:
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

imc[i]= peso[i]/altura[i]*altura[i]


vet = zeros(peso,dtype=float)

while(imc[i] != max(imc[i]):
		i = i + 1
	if(imc[i] == max(imc[i]):
		print("O MAIOR IMC DA TURMA EH:",max(imc[i]))

for i in range(size(peso)):
	imc[i] = peso[i]/altura[i]*altura[i]
	if(imc[i] < 17):
		print("muito abaixo do peso")
	elif(imc[i] >= 17 and <= 18.49):
		print("abaixo do peso"):
	elif(imc[i] >= 18.5 and <= 24.99):
		print("peso normal")
	elif(imc[i] >= 25 and <= 29.99):
		print("acima do peso")
	elif(imc[i] >= 30 and <= 34.99):
		print("obesidade")
	elif(imc[i] >= 35 and <= 39.99):
		print("obesidade severa")
	elif(imc[i] >= 40):
		print("obesidade morbida")
	
	
		


-- ERROR:
File "XXXX", line 9
    while(imc[i] != max(imc[i]):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:58:07) 
-- CODE:
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

imc[i]= peso[i]/altura[i]*altura[i]


vet = zeros(peso,dtype=float)

while(imc[i] != max(imc):
		i = i + 1
	if(imc[i] == max(imc[i]):
		print("O MAIOR IMC DA TURMA EH:",max(imc[i]))

for i in range(size(peso)):
	imc[i] = peso[i]/altura[i]*altura[i]
	if(imc[i] < 17):
		print("muito abaixo do peso")
	elif(imc[i] >= 17 and <= 18.49):
		print("abaixo do peso"):
	elif(imc[i] >= 18.5 and <= 24.99):
		print("peso normal")
	elif(imc[i] >= 25 and <= 29.99):
		print("acima do peso")
	elif(imc[i] >= 30 and <= 34.99):
		print("obesidade")
	elif(imc[i] >= 35 and <= 39.99):
		print("obesidade severa")
	elif(imc[i] >= 40):
		print("obesidade morbida")
	
	
		


-- ERROR:
File "XXXX", line 9
    while(imc[i] != max(imc):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:58:27) 
-- CODE:
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

imc[i]= peso[i]/altura[i]*altura[i]


vet = zeros(peso,dtype=float)

while(imc[i] != max(imc[i]):
		i = i + 1
	if(imc[i] == max(imc[i]):
		print("O MAIOR IMC DA TURMA EH:",max(imc[i]))

for i in range(size(peso)):
	imc[i] = peso[i]/altura[i]*altura[i]
	if(imc[i] < 17):
		print("muito abaixo do peso")
	elif(imc[i] >= 17 and <= 18.49):
		print("abaixo do peso"):
	elif(imc[i] >= 18.5 and <= 24.99):
		print("peso normal")
	elif(imc[i] >= 25 and <= 29.99):
		print("acima do peso")
	elif(imc[i] >= 30 and <= 34.99):
		print("obesidade")
	elif(imc[i] >= 35 and <= 39.99):
		print("obesidade severa")
	elif(imc[i] >= 40):
		print("obesidade morbida")
	
	
		


-- ERROR:
File "XXXX", line 9
    while(imc[i] != max(imc[i]):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:05:13) 
-- CODE:
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

vet = zeros(peso,dtype=float)

for i in range(size(peso)):
	vet[i] = round(peso[i] / (altura[i])**2,2)


for i in range(size(peso)):
	imc[i] = peso[i]/altura[i]*altura[i]
	if(imc[i] < 17):
		print("muito abaixo do peso")
	elif(imc[i] >= 17 and <= 18.49):
		print("abaixo do peso"):
	elif(imc[i] >= 18.5 and <= 24.99):
		print("peso normal")
	elif(imc[i] >= 25 and <= 29.99):
		print("acima do peso")
	elif(imc[i] >= 30 and <= 34.99):
		print("obesidade")
	elif(imc[i] >= 35 and <= 39.99):
		print("obesidade severa")
	elif(imc[i] >= 40):
		print("obesidade morbida")
	
	
		


-- ERROR:
File "XXXX", line 14
    elif(imc[i] >= 17 and <= 18.49):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:05:27) 
-- CODE:
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

vet = zeros(peso,dtype=float)

for i in range(size(peso)):
	vet[i] = round(peso[i] / (altura[i])**2,2)

print(vet)
for i in range(size(peso)):
	imc[i] = peso[i]/altura[i]*altura[i]
	if(imc[i] < 17):
		print("muito abaixo do peso")
	elif(imc[i] >= 17 and <= 18.49):
		print("abaixo do peso"):
	elif(imc[i] >= 18.5 and <= 24.99):
		print("peso normal")
	elif(imc[i] >= 25 and <= 29.99):
		print("acima do peso")
	elif(imc[i] >= 30 and <= 34.99):
		print("obesidade")
	elif(imc[i] >= 35 and <= 39.99):
		print("obesidade severa")
	elif(imc[i] >= 40):
		print("obesidade morbida")
	
	
		


-- ERROR:
File "XXXX", line 14
    elif(imc[i] >= 17 and <= 18.49):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:05:46) 
-- CODE:
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

vet = zeros(peso,dtype=float)

for i in range(size(peso)):
	vet[i] = round(peso[i] / (altura[i])**2,2)


for i in range(size(peso)):
	imc[i] = peso[i]/altura[i]*altura[i]
	if(imc[i] < 17):
		print("muito abaixo do peso")
	elif(imc[i] >= 17 and <= 18.49):
		print("abaixo do peso"):
	elif(imc[i] >= 18.5 and <= 24.99):
		print("peso normal")
	elif(imc[i] >= 25 and <= 29.99):
		print("acima do peso")
	elif(imc[i] >= 30 and <= 34.99):
		print("obesidade")
	elif(imc[i] >= 35 and <= 39.99):
		print("obesidade severa")
	elif(imc[i] >= 40):
		print("obesidade morbida")
print(vet)
	
		


-- ERROR:
File "XXXX", line 14
    elif(imc[i] >= 17 and <= 18.49):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:06:03) 
-- CODE:
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

vet = zeros(peso,dtype=float)

for i in range(size(peso)):
	vet[i] = round(peso[i] / (altura[i])**2,2)



print(vet)
	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    peso = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:06:15) 
-- CODE:
from numpy import *
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

vet = zeros(peso,dtype=float)

for i in range(size(peso)):
	vet[i] = round(peso[i] / (altura[i])**2,2)



print(vet)
	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:06:24) 
-- CODE:
from numpy import *
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

vet = zeros(peso,dtype=float)

for i in range(size(peso)):
	vet[i] = round(peso[i] / (altura[i])**2,2)



print(vet)
	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:08:37) 
-- CODE:
from numpy import *
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

vet = zeros(size(peso))

for i in range(size(peso)):
	vet[i] = round(peso[i] / (altura[i])**2,2)



print(vet)
	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:10:22) 
-- CODE:
from numpy import *
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

vet = zeros(size(peso))

for i in range(size(peso)):
	vet[i] = round(peso[i] / (altura[i])**2,2)



print(vet)
	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:10:55) 
-- CODE:
from numpy import *
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

vet = zeros(size(peso))

for i in range(size(peso)):
	vet[i] = round(peso[i] / (altura[i])**2,2)



print(vet)
	
		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:20:46) 
-- CODE:
from numpy import *
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

vet = zeros(size(peso))

for i in range(size(peso)):
	vet[i] = round(peso[i] / (altura[i])**2,2)
print(vet)
print("O MAIOR IMC DA TURMA EH:",max(vet))

if(max(vet) < 17):
	print("MUITO ABAIXO DO PESO")
elif(max(vet) >= 17 and max(vet) <= 18.49):
	print("ABAIXO DO PESO")
elif(max(vet) >= 18.5 and max(vet) <= 24.99):
	print("PESO NORMAL")
elif(max(vet) >= 25 and max(vet) <= 29.99):
	print("ACIMA DO PESO")
elif(max(vet) >= 30 and max(vet) <= 34.99):
	print("OBESIDADE")
elif(max(vet) >= 35 and max(vet) <= 39.99):
	print("OBESIDADE SEVERA")
elif(max(vet) >= 40):
	print("OBESIDADE MORBIDA")

		


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:21:15) 
-- CODE:
from numpy import *
peso = array(eval(input("peso:")))
altura = array(eval(input("altura:")))

vet = zeros(size(peso))

for i in range(size(peso)):
	vet[i] = round(peso[i] / (altura[i])**2,2)
print(vet)
print("O MAIOR IMC DA TURMA EH:",max(vet))

if(max(vet) < 17):
	print("MUITO ABAIXO DO PESO")
elif(max(vet) >= 17 and max(vet) <= 18.49):
	print("ABAIXO DO PESO")
elif(max(vet) >= 18.5 and max(vet) <= 24.99):
	print("PESO NORMAL")
elif(max(vet) >= 25 and max(vet) <= 29.99):
	print("ACIMA DO PESO")
elif(max(vet) >= 30 and max(vet) <= 34.99):
	print("OBESIDADE")
elif(max(vet) >= 35 and max(vet) <= 39.99):
	print("OBESIDADE SEVERA")
elif(max(vet) >= 40):
	print("OBESIDADE MORBIDA")

		


-- EXECUTION TIME:
0.94208
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
